# testdeploy

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  library_fixture.json  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
students/: admin.py  forms.py  models.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_mymodel.py  0003_mymodel_description.py  0004_student_email_student_enrollment_date.py  0005_alter_student_options.py
students/templates/students/: about.html  base.html  contact.html  example.html  header.html  index.html  mymodel_confirm_delete.html  mymodel_detail.html  mymodel_form.html  mymodel_list.html  student_detail.html  student_form.html  student_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
