[project]
name = "less"
version = "0.1.0"
description = ""
authors = [
    {name = "timur",email = "timuryavashev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0,<7.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "ipython (>=9.8.0,<10.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "django-redis (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)"
]
